--- a/style.css
+++ b/style.css
@@ -1,18 +1,18 @@
-@import url('https://fonts.googleapis.com/css2?family=Chakra+Petch:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Chakra+Petch:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap&#39;');
 
 :root{
-    --cor-de-fundo: #1E1E1E;
-    --azul: #00FFFF;
-    --verde: #6fff57;
-    --botao-ativo: #375e3b;
-    --botao-inativo: #375e3b;
-    --texto--fundo: #ffffff;
+--cor-de-fundo: #000000;
+--verde: #ff0000;
+--branco: #FFFFFF;
+--botao-ativo: #ff1010;
+--botao-inativo: #ff0000;
+--texto-fundo: #565656;
 }
 
 body{
-    background-color: var(--cor-de-fundo);
-    color: var(--verde);
-    font-family: "chakra petch", sans-serif;
+background-color: var(--cor-de-fundo);
+color: var(--branco);
+font-family: "chakra Petch", sans-serif;
 }
 
 .conteudo-principal{
@@ -31,50 +31,71 @@ body{
     font-size: 32px;
 }
 
- .titulo-principal span{
-    color:deeppink;
- }
+.titulo-principal span{
+        color: var(--botao-ativo)
+}
 
-    .botao{
-        font-family: "Chakra Petch", sans-serif;
-        background-color: var(--botao-ativo);
-        color: var(--texto--fundo);
-        display: flex;
-        justify-content: center;
-        padding: 1em;
-        font-size: 18px;
-        align-items: center;
-        width: 100%;
-        border-bottom: 4px solid var(--verde); 
-        border-left: 2px solid var(--verde);
-        border-right: 2px solid var(--verde);
-        border-top: none;
-    }
+.botao{
+    font-family: "Chakra Petch", sans-serif;
+    background-color: var(--botao-inativo);
+    color: var(--branco);
+    display: flex;
+    justify-content: center;
+    padding: 1em;
+    font-size: 18px;
+    align-items: center;
+    width: 100%;
+    border-bottom: 4px solid var(--botao-ativo);
+    border-left: 2px solid var(--botao-ativo);
+    border-right: 2px solid var(--botao-ativo);
+    border-top: none;
+}
 
+.botoes{
+    display: block;
+}
+
+.botao:first-child{
+    border-radius: 40px 40px 0 0;
+}
+
+.botao.ativo{
+    background-color: var(--botao-ativo);
+    border-bottom: 4px solid var(--botao-inativo);
+}
+
+.abas-textos{
+    background-color: var(--texto-fundo);
+    padding: 40px;
+    border-radius: 0 0 40px 40px;
+}
+.aba-conteudo.ativo{
+    display:block;
+}
+
+.aba-conteudo{
+    display: none;
+}
+
+.aba-conteudo-titulo-principal{
+    font-size: 28px;
+    text-align: center;
+}
+.aba-conteudo-titulo-secundario{
+    text-align: center;
+    color: var(--branco);
+    text-transform: uppercase;
+}
+
+ @media screen and (min-width: 768px){
     .botoes{
-        display: block;
+        display: flex;
     }
-
-    .bortao:first-child{
-        border-radius: 40px 40px 0 0;
-        border-bottom: 4px solid var(--verde);
+    .botao:first-child {
+        border-radius: 40px  0 0 0;
     }
-
-    .ativo{
-        background-color: var(--botao-ativo);
+    .botao:last-child{
+        border-radius: 0 40px 0 0;
     }
-
-     @media screen and (min-width: 768px){
-        .botoes{
-            display: flex;
-        }
-        .botao:first-child{
-            border-radius: 40px 0 0 0;
-        }
-        .botao:last-child{
-            border-radius: 0 40px 0 0;
-        }
-
-
-
-    }
+    
+ }
