--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 
 :root{
 --cor-de-fundo: #000000;
---verde: #ff0000;
+--verde: #042508;
 --branco: #FFFFFF;
 --botao-ativo: #ff1010;
 --botao-inativo: #ff0000;
